# ann-playground

./: .gitignore  README.md  stack.yaml
ann-server/: ann-server.cabal
ann-server/src/: Main.hs
ann-server/src/Dataset/: Mnist.hs  Types.hs
