name:                ann-server
version:             0.1.0.0
synopsis:            Server of ANN functionality.
description:         Please see README.md
homepage:            https://github.com/githubuser/ann-playground#readme
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          patrik.sandahl@gmail.com
copyright:           2016 Patrik Sandahl
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable ann-server
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Dataset.Mnist
                       Dataset.Types
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , cassava
                     , cassava-conduit
                     , conduit
                     , conduit-combinators
                     , either
                     , fast-logger
                     , mtl
                     , resourcet
                     , servant-server
                     , text
                     , vector
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010
  ghc-options:         -Wall
